# NgaPerceiver

./: CMakeLists.txt  README.md
cmake/: CopyPclDlls.cmake  CopyVtkDlls.cmake
config/: app_config.json
docker/: Dockerfile.arm64  README_ARM64.md  build_arm64.ps1  build_arm64.sh
docs/: 后续开发计划.md  系统架构设计_v2.md  配置与通信协议说明.md  雷达安装记录.md  靠离泊感知系统开发计划2.0.md  靠离泊感知系统概要设计说明书.md
include/acquisition/: data_processor.h  device_manager.h  replayer.h  streamer.h
include/algorithms/: docking_algorithm.h  docking_types.h
include/communication/: docking_packet.h  docking_publisher.h
include/core/: app_config.h  app_init.h  common.h  config.h  logger.h  pipeline_setup.h  processor.h  queue.h  translation_manager.h
include/preprocessing/: crop_box_filter.h  density_filter.h  distance_filter.h  filter.h  motion_filter.h  statistical_outlier_filter.h  voxel_filter.h
include/segmentation/: sea_surface_filter.h
include/ui/: point_cloud_wgt.h
include/visualization/: camera_interactor.h  color_map.h  renderer.h
scripts/: build_headless.ps1  build_utf8.ps1  clean.ps1  configure.ps1  update_translations.ps1
src/: main.cpp  main_headless.cpp
src/acquisition/: data_processor.cpp  device_manager.cpp  replayer.cpp  streamer.cpp
src/algorithms/: docking_algorithm.cpp
src/communication/: docking_publisher.cpp
src/core/: app_config.cpp  app_init.cpp  pipeline_setup.cpp  processor.cpp  translation_manager.cpp
src/preprocessing/: crop_box_filter.cpp  density_filter.cpp  distance_filter.cpp  motion_filter.cpp  statistical_outlier_filter.cpp  voxel_filter.cpp
src/segmentation/: sea_surface_filter.cpp
src/ui/: point_cloud_wgt.cpp
src/visualization/: camera_interactor.cpp  color_map.cpp  renderer.cpp
tools/: build_udp_receiver.bat  udp_receiver.cpp
translations/: linger_en.ts  linger_zh_CN.ts
ui/: point_cloud_wgt.ui
